# chess-eval

./: .empty.env  .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  requirements.txt
chesseval/: __init__.py  main.py
prompts/: no_example.txt  with_example.txt
